[package]
name = "specfilter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.4.0"
signal_processing = "0.3.0"
num-traits = "0.2.19"
array_math = "0.2.44"
real_time_fir_iir_filters = "0.6.9"

[lib]
name = "specfilter"
crate-type = ["cdylib"]
